# go_cpp_interact

./: .gitignore  autorun.sh  readme.md
cpp_lib/: define.h  game_logic.cpp  game_logic.h  game_table.cpp  game_table.h  game_user.cpp  game_user.h  interface.h  main.cpp  test.cpp  test.h
cpp_loigc/: CMakeLists.txt  cpp_bridge.cpp  cpp_bridge.h  logic.cpp  logic.h
go_exe/: export_interface.go  go.mod  main.go
interact/: cpp_export.h  go_bridge.cpp  go_bridge.h  go_export.h  interface_define.h  logic_bridge.cpp  logic_bridge.h  logic_bridgeh  logic_interface.h  logic_interfaceh
